[tool.poetry]
name = "tg-order-mvp"
version = "0.1.0"
description = ""
authors = ["Anuar Kopzhassarov <chehve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
